# ai-gateway

core/: Cargo.toml
gateway/: Cargo.toml
golang/: Dockerfile  README.md  go.mod
golang/cmd/gateway/: main.go
golang/config/: config.sample.yaml
golang/internal/config/: config.go  config_test.go
golang/internal/guardrails/: guardrails.go
golang/internal/mcp/: client.go
golang/internal/metrics/: metrics.go
golang/internal/observability/: otel.go
golang/internal/provider/: provider.go
golang/internal/provider/echo/: echo.go
golang/internal/routing/: router.go  router_test.go
golang/internal/server/: server.go
golang/internal/tui/: tui.go
python/: .env.example  Dockerfile  PENDING.md  README.md  config.sample.yaml  models.yaml  pyproject.toml
python/gateway/: __init__.py  constants.py  main.py
python/gateway/api/: router.py  router_config.py
python/gateway/api/v1/: __init__.py  chat.py  embeddings.py  images.py  models.py
python/gateway/cli/: __init__.py  commands.py
python/gateway/config/: models.py  settings.py
python/gateway/core/: executor.py  models.py  types.py
python/gateway/errors/: exceptions.py  handlers.py
python/gateway/guardrails/: __init__.py  service.py
python/gateway/middleware/: __init__.py  auth.py  cors.py  logging.py  rate_limit.py
python/gateway/providers/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  gemini.py  mistral.py  openai.py  registry.py
python/gateway/routing/: __init__.py  router.py
python/gateway/telemetry/: __init__.py  logging.py  setup.py  tracing.py
python/gateway/usage/: __init__.py  cost.py  limits.py  storage.py
python/gateway/utils/: security.py  token_counter.py
